Fixed mobile visibility issues

--- a/index.css
+++ b/index.css
@@ -1,23 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-::-webkit-scrollbar {
-	width: 0.65rem;
-}
-
-::-webkit-scrollbar-track {
-	background-color: rgba(0, 0, 0, 0);
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: rgba(56, 56, 56, 1);
-}
-
-::-webkit-scrollbar-thumb:hover {
-	background-color: rgb(0, 0, 0);
-	transition: all 0.5s;
-}
-
 :root {
+	--transparent: rgba(0, 0, 0, 0);
+	--black: #000000;
 	--gray: #191919;
 	--light-gray: #393939;
 	--slightly-lighter-gray: #595959;
@@ -25,6 +10,25 @@
 	--purple: #42098e;
 	--cyan: #1f5eff;
 	--orange: #ff8c00;
+	--yellow: #ffc400; /* !! Unused !! */
+	--green: #00ff00; /* !! Unused !! */
+}
+
+::-webkit-scrollbar {
+	width: 0.65rem;
+}
+
+::-webkit-scrollbar-track {
+	background-color: var(--transparent);
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: var(--light-gray);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: var(--black);
+	transition: all 0.5s;
 }
 
 * {
@@ -41,12 +45,12 @@ body {
 	background-color: var(--gray);
 }
 
-.text-orange {
+.text-orange-cyan {
 	color: var(--orange);
 	transition: all 0.3s ease;
 }
 
-.text-orange:hover {
+.text-orange-cyan:hover {
 	color: var(--cyan);
 }
 
@@ -63,12 +67,19 @@ body {
 	width: 100%;
 }
 
+#site {
+	/* Make a 2 column grid, that gives the navigation as much space as it needs, and the rest to the content */
+	/* Also, add a little gap between the navigation and the content */
+	display: grid;
+	grid-template-columns: min-content 1fr;
+	grid-gap: 5vw;
+}
+
 #navigation {
-	position: fixed;
+	position: sticky;
 	top: 0;
-	left: 0;
 	height: 100vh;
-	width: 35vw;
+	width: min-content;
 	display: flex;
 	align-items: center;
 }
@@ -93,9 +104,8 @@ body {
 }
 
 #content {
-	position: absolute;
-	left: 40vw;
-	width: 55vw;
+	width: 100%;
+	padding-right: 5vw;
 }
 
 #content > * {
@@ -207,8 +217,23 @@ body {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
+	font-size: 1.5rem;
 }
 
 #imprint-details {
 	padding-top: 3rem;
+}
+
+@media (hover: none) {
+	.text-orange-cyan:hover {
+		color: var(--orange);
+	}
+
+	#navigation-container > a:hover {
+		color: var(--purple);
+	}
+
+	#cards > *:hover {
+		background-color: var(--light-gray);
+	}
 }
